--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: 22
           script: |
-            cd ESDP-AP-7-team-1
+            cd test_branch
             git pull
             docker-compose down --remove-orphans
             sudo docker-compose -f docker-compose.yml up --build -d
