--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,8 +23,9 @@ jobs:
           port: 22
           script: |
             cd projects
+            rm -r test_branch
+            git clone https://github.com/Chingiz-Almukhan/test_branch.git
             cd test_branch
-            git pull
             docker-compose down --remove-orphans
             chmod +x entrypoint.sh
             sudo docker-compose -f docker-compose.yml up --build -d
