--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,9 @@
 name: "Django deploy workflow v2"
 
 on:
+  push:
+    branches: [ master ]
   workflow_dispatch:
-    push:
-      branches:
-        - master
 
 jobs:
   deploy-job:
